DP-971: Add pydantic requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flask==1.1.2              # via event-streams-api (setup.py), flask-restful
 itsdangerous==1.1.0       # via flask
 jinja2==2.11.1            # via flask
 markupsafe==1.1.1         # via jinja2
+pydantic==1.5.1           # via event-streams-api (setup.py)
 pytz==2019.3              # via flask-restful
 six==1.14.0               # via flask-restful
 werkzeug==1.0.1           # via flask
