--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,23 @@ install_command =
 
 deps =
     pytest
+    pytest-mock
+    freezegun
     dataplatform-common-python
+    boto3==1.10.20
+    botocore==1.13.20
+    moto
     -r requirements.txt
 commands =
     pytest -s {posargs}
 setenv =
     AWS_ACCESS_KEY_ID = mock
     AWS_SECRET_ACCESS_KEY = mock
+    AWS_SECURITY_TOKEN = mock
+    AWS_SESSION_TOKEN = mock
+    CLOUDFORMATION_SNS_TOPIC = "arn:aws:sns:eu-west-1:987654321:stream-manager-cloudformation-events-test"
+    ORIGO_ENVIRONMENT = localdev
+    AWS_REGION = eu-west-1
 
 [testenv:flake8]
 skip_install = true
