--- a/serverless.yaml
+++ b/serverless.yaml
@@ -19,8 +19,8 @@ provider:
     VERSION: ${self:custom.version}
   environment:
     GIT_REV: ${git:branch}:${git:sha1}
-    STAGE: ${self:provider.stage}
     VERSION: ${self:custom.version}
+    ORIGO_ENVIRONMENT: ${self:provider.stage}
 package:
   exclude:
     - '**/*'
