DP-1013: Update cf-statuses (#8)
* DP-1013: Add handler for updating cf statuses

* DP-1013: Update cf status for subscribable and for sinks

* DP-1013: Resolve stream id from stack name

* DP-1013: Write unittests for cf_status service

* DP-1013: Unit tests for sns handler

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -34,6 +34,10 @@ functions:
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
+  update_cf_status:
+    handler: notifications.sns_handler.handle
+    events:
+      - sns: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:event-stream-api-cloudformation-events"
 
 plugins:
   - serverless-wsgi
