--- a/serverless.yaml
+++ b/serverless.yaml
@@ -12,7 +12,7 @@ provider:
   deploymentPrefix: deploy
   rolePermissionsBoundary: "arn:aws:iam::#{AWS::AccountId}:policy/oslokommune/oslokommune-boundary"
   iamManagedPolicies:
-    - 'arn:aws:iam::#{AWS::AccountId}:policy/lambda-boilerplate-policy'
+    - 'arn:aws:iam::#{AWS::AccountId}:policy/event-stream-api-policy'
     - 'arn:aws:iam::aws:policy/AWSXRayDaemonWriteAccess'
   tags:
     GIT_REV: ${git:branch}:${git:sha1}
@@ -25,7 +25,11 @@ package:
   exclude:
     - '**/*'
   include:
-    - 'event_streams/**/*.py'
+    - 'clients/*.py'
+    - 'database/*.py'
+    - 'notifications/*.py'
+    - 'resources/*.py'
+    - 'services/*.py'
     - '*.py'
 
 functions:
