DP-1021: Add elasticsearch_dsl, elasticsearch

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ setenv =
     CLOUDFORMATION_SNS_TOPIC = "arn:aws:sns:eu-west-1:987654321:stream-manager-cloudformation-events-test"
     ORIGO_ENVIRONMENT = localdev
     AWS_REGION = eu-west-1
+    ES_API_ENDPOINT = mock
 
 [testenv:flake8]
 skip_install = true
