DP-1050 - add updated by/at for sinks and subscribable

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -31,6 +31,7 @@ package:
     - "notifications/*.py"
     - "resources/*.py"
     - "services/*.py"
+    - "services/template/*.py"
     - "*.py"
 
 functions:
