DP-1120: Rename service event-streams-api -> event-stream-api (#41)

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1,5 +1,5 @@
 frameworkVersion: ">=1.64.0 <2.0.0"
-service: event-streams-api
+service: event-stream-api
 provider:
   name: aws
   runtime: python3.7
