--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     dataplatform-common-python
     boto3==1.10.20
     botocore==1.13.20
-    moto
+    moto==1.3.14
     -r requirements.txt
 commands =
     pytest -s {posargs}
