--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,7 @@ current_version = 0.1.0
 commit = True
 tag = True
 
+[bumpversion:file:app.py]
 [bumpversion:file:setup.py]
 [bumpversion:file:serverless.yaml]
 [bumpversion:file:package.json]
