Type checking with mypy

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,11 @@
 [tox]
-envlist = py37, flake8, black
+envlist = py37, flake8, black, mypy
 
 [testenv]
-install_command =
-    pip install --extra-index-url={env:extra_index_url:***REMOVED***} {opts} {packages}
-
 deps =
     pytest
     pytest-mock
     freezegun
-    dataplatform-common-python
     moto==1.3.14
     -r requirements.txt
 commands =
@@ -37,6 +33,15 @@ deps =
     black
 commands =
     black --check .
+
+[testenv:mypy]
+skip_install = true
+deps =
+    mypy
+    boto3-stubs[sts,cloudformation]
+    -r requirements.txt
+commands =
+    mypy app.py
 
 
 [flake8]
