--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
+    "serverless": "^2.10.0",
     "serverless-es-logs": "^3.2.0",
     "serverless-plugin-git-variables": "^4.0.0",
     "serverless-pseudo-parameters": "^2.5.0",
