--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,25 @@
 #    pip-compile
 #
 attrs==20.2.0             # via jsonschema
-boto3==1.15.16            # via event-stream-api (setup.py)
+aws-sam-translator==1.33.0  # via cfn-lint
+boto3==1.15.16            # via aws-sam-translator, event-stream-api (setup.py)
 botocore==1.18.16         # via boto3, s3transfer
 certifi==2020.6.20        # via elasticsearch, requests
+cfn-lint==0.38.0          # via event-stream-api (setup.py)
 chardet==3.0.4            # via requests
+decorator==4.4.2          # via networkx
 ecdsa==0.14.1             # via python-jose
 elasticsearch-dsl==7.2.1  # via event-stream-api (setup.py)
 elasticsearch==7.9.1      # via elasticsearch-dsl
 fastapi==0.61.1           # via event-stream-api (setup.py)
 idna==2.10                # via requests
 jmespath==0.10.0          # via boto3, botocore
-jsonschema==3.2.0         # via origo-sdk-python
+jsonpatch==1.28           # via cfn-lint
+jsonpointer==2.0          # via jsonpatch
+jsonschema==3.2.0         # via aws-sam-translator, cfn-lint, origo-sdk-python
+junit-xml==1.9            # via cfn-lint
 mangum==0.10.0            # via event-stream-api (setup.py)
+networkx==2.5             # via cfn-lint
 origo-sdk-python==0.2.3   # via event-stream-api (setup.py)
 prettytable==1.0.1        # via origo-sdk-python
 pyasn1==0.4.8             # via python-jose, rsa
@@ -27,12 +34,13 @@ python-dateutil==2.8.1    # via botocore, elasticsearch-dsl
 python-jose==3.2.0        # via python-keycloak
 python-keycloak==0.22.0   # via origo-sdk-python
 pytz==2020.1              # via event-stream-api (setup.py)
+pyyaml==5.3.1             # via cfn-lint
 requests-aws4auth==1.0    # via event-stream-api (setup.py)
 requests==2.24.0          # via origo-sdk-python, python-keycloak, requests-aws4auth
 rsa==4.6                  # via python-jose
 s3transfer==0.3.3         # via boto3
 shortuuid==1.0.1          # via event-stream-api (setup.py)
-six==1.15.0               # via ecdsa, elasticsearch-dsl, jsonschema, python-dateutil, python-jose
+six==1.15.0               # via aws-sam-translator, cfn-lint, ecdsa, elasticsearch-dsl, jsonschema, junit-xml, python-dateutil, python-jose
 starlette==0.13.6         # via fastapi
 typing-extensions==3.7.4.3  # via mangum
 urllib3==1.25.10          # via botocore, elasticsearch, origo-sdk-python, requests
