Lock freezegun version in attempt to unbreak Jenkins

--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,10 @@ envlist = py37, flake8, black, mypy
 
 [testenv]
 deps =
+    freezegun==1.0.0
+    moto==1.3.14
     pytest
     pytest-mock
-    freezegun
-    moto==1.3.14
     -r requirements.txt
 commands =
     pytest -s {posargs}
