Unlock moto version in attempt to unbreak Jenkins

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py37, flake8, black, mypy
 [testenv]
 deps =
     freezegun==1.0.0
-    moto==1.3.14
+    moto
     pytest
     pytest-mock
     -r requirements.txt
