DP-1756 Upgrade from origo-sdk-python to okdata-sdk

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
     AWS_SECURITY_TOKEN = mock
     AWS_SESSION_TOKEN = mock
     CLOUDFORMATION_SNS_TOPIC = "arn:aws:sns:eu-west-1:987654321:stream-manager-cloudformation-events-test"
-    ORIGO_ENVIRONMENT = localdev
+    OKDATA_ENVIRONMENT = localdev
     AWS_REGION = eu-west-1
     ES_API_ENDPOINT = mock
 
