--- a/requirements.txt
+++ b/requirements.txt
@@ -4,39 +4,94 @@
 #
 #    pip-compile
 #
-attrs==20.2.0             # via jsonschema
-boto3==1.15.16            # via event-stream-api (setup.py)
-botocore==1.18.16         # via boto3, s3transfer
-certifi==2020.6.20        # via elasticsearch, requests
-chardet==3.0.4            # via requests
-ecdsa==0.14.1             # via python-jose
-elasticsearch-dsl==7.2.1  # via event-stream-api (setup.py)
-elasticsearch==7.9.1      # via elasticsearch-dsl
-fastapi==0.61.1           # via event-stream-api (setup.py)
-idna==2.10                # via requests
-jmespath==0.10.0          # via boto3, botocore
-jsonschema==3.2.0         # via origo-sdk-python
-mangum==0.10.0            # via event-stream-api (setup.py)
-origo-sdk-python==0.2.3   # via event-stream-api (setup.py)
-prettytable==1.0.1        # via origo-sdk-python
-pyasn1==0.4.8             # via python-jose, rsa
-pydantic==1.6.1           # via fastapi
-pyjwt==1.7.1              # via origo-sdk-python
-pyrsistent==0.17.3        # via jsonschema
-python-dateutil==2.8.1    # via botocore, elasticsearch-dsl
-python-jose==3.2.0        # via python-keycloak
-python-keycloak==0.22.0   # via origo-sdk-python
-pytz==2020.1              # via event-stream-api (setup.py)
-requests-aws4auth==1.0    # via event-stream-api (setup.py)
-requests==2.24.0          # via origo-sdk-python, python-keycloak, requests-aws4auth
-rsa==4.6                  # via python-jose
-s3transfer==0.3.3         # via boto3
-shortuuid==1.0.1          # via event-stream-api (setup.py)
-six==1.15.0               # via ecdsa, elasticsearch-dsl, jsonschema, python-dateutil, python-jose
-starlette==0.13.6         # via fastapi
-typing-extensions==3.7.4.3  # via mangum
-urllib3==1.25.10          # via botocore, elasticsearch, origo-sdk-python, requests
-wcwidth==0.2.5            # via prettytable
+attrs==20.2.0
+    # via jsonschema
+boto3==1.15.16
+    # via event-stream-api (setup.py)
+botocore==1.18.16
+    # via
+    #   boto3
+    #   s3transfer
+certifi==2020.6.20
+    # via
+    #   elasticsearch
+    #   requests
+chardet==3.0.4
+    # via requests
+ecdsa==0.14.1
+    # via python-jose
+elasticsearch-dsl==7.2.1
+    # via event-stream-api (setup.py)
+elasticsearch==7.9.1
+    # via elasticsearch-dsl
+fastapi==0.61.1
+    # via event-stream-api (setup.py)
+idna==2.10
+    # via requests
+jmespath==0.10.0
+    # via
+    #   boto3
+    #   botocore
+jsonschema==3.2.0
+    # via okdata-sdk
+mangum==0.10.0
+    # via event-stream-api (setup.py)
+okdata-sdk==0.6.2
+    # via event-stream-api (setup.py)
+prettytable==1.0.1
+    # via okdata-sdk
+pyasn1==0.4.8
+    # via
+    #   python-jose
+    #   rsa
+pydantic==1.6.1
+    # via fastapi
+pyjwt==1.7.1
+    # via okdata-sdk
+pyrsistent==0.17.3
+    # via jsonschema
+python-dateutil==2.8.1
+    # via
+    #   botocore
+    #   elasticsearch-dsl
+python-jose==3.2.0
+    # via python-keycloak
+python-keycloak==0.22.0
+    # via okdata-sdk
+pytz==2020.1
+    # via event-stream-api (setup.py)
+requests-aws4auth==1.0
+    # via event-stream-api (setup.py)
+requests==2.24.0
+    # via
+    #   okdata-sdk
+    #   python-keycloak
+    #   requests-aws4auth
+rsa==4.6
+    # via python-jose
+s3transfer==0.3.3
+    # via boto3
+shortuuid==1.0.1
+    # via event-stream-api (setup.py)
+six==1.15.0
+    # via
+    #   ecdsa
+    #   elasticsearch-dsl
+    #   jsonschema
+    #   python-dateutil
+    #   python-jose
+starlette==0.13.6
+    # via fastapi
+typing-extensions==3.7.4.3
+    # via mangum
+urllib3==1.25.10
+    # via
+    #   botocore
+    #   elasticsearch
+    #   okdata-sdk
+    #   requests
+wcwidth==0.2.5
+    # via prettytable
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
