--- a/serverless.yaml
+++ b/serverless.yaml
@@ -20,7 +20,7 @@ provider:
   environment:
     GIT_REV: ${git:branch}:${git:sha1}
     VERSION: ${self:custom.version}
-    ORIGO_ENVIRONMENT: ${self:provider.stage}
+    OKDATA_ENVIRONMENT: ${self:provider.stage}
     ES_API_ENDPOINT: ${ssm:/dataplatform/shared/eventdata-elasticsearch-endpoint}
     ROOT_PATH: "/streams"
 package:
