--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py37, flake8, black, mypy
 deps =
     cfn-lint==0.38.0
     freezegun==1.0.0
-    moto
+    moto==1.3.16
     pytest
     pytest-mock
     -r requirements.txt
