DP-1845: Authorize with okdata-resource-auth (#60)
* DP-1845: Authorize with okdata-resource-auth

* DP-1845: Fix failing mypy

* DP-1845: Tell mypy we're using namespace pacakges

* DP-1845: Add missing env variables and fix mypy once again

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,14 +1,5 @@
-[mypy-okdata.sdk.*]
-ignore_missing_imports = True
+[mypy]
+namespace_packages = True
 
-[mypy-keycloak.*]
-ignore_missing_imports = True
-
-[mypy-elasticsearch.*]
-ignore_missing_imports = True
-
-[mypy-elasticsearch_dsl.*]
-ignore_missing_imports = True
-
-[mypy-requests_aws4auth.*]
+[mypy-okdata.resource_auth.*]
 ignore_missing_imports = True
