--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,9 @@ setenv =
     OKDATA_ENVIRONMENT = localdev
     AWS_REGION = eu-west-1
     ES_API_ENDPOINT = mock
+    KEYCLOAK_SERVER=https://example.org
+    KEYCLOAK_REALM=mock
+    RESOURCE_SERVER_CLIENT_ID=okdata-resource-server
 
 [testenv:flake8]
 skip_install = true
