--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,14 @@
 [mypy]
 namespace_packages = True
 
-[mypy-okdata.resource_auth.*]
+[mypy-okdata.*]
+ignore_missing_imports = True
+
+[mypy-keycloak.*]
+ignore_missing_imports = True
+
+[mypy-elasticsearch_dsl.*]
+ignore_missing_imports = True
+
+[mypy-requests_aws4auth.*]
 ignore_missing_imports = True
