--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     pytest-mock
     -r requirements.txt
 commands =
-    pytest -s {posargs}
+    pytest {posargs}
 setenv =
     AWS_ACCESS_KEY_ID = mock
     AWS_SECRET_ACCESS_KEY = mock
