--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "event-streams-api",
+  "name": "okdata-event-stream-api",
   "description": "",
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
-    "serverless": "^2.10.0",
-    "serverless-es-logs": "^3.2.0",
-    "serverless-plugin-git-variables": "^4.0.0",
+    "serverless": "^2.48.0",
+    "serverless-es-logs": "^3.4.2",
+    "serverless-plugin-git-variables": "^5.1.0",
     "serverless-pseudo-parameters": "^2.5.0",
-    "serverless-python-requirements": "^5.1.0",
-    "serverless-wsgi": "^1.7.4"
+    "serverless-python-requirements": "^5.1.1",
+    "serverless-wsgi": "^1.7.8"
   }
 }
