--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 attrs==21.2.0
     # via jsonschema
 boto3==1.15.16
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 botocore==1.18.18
     # via
     #   boto3
@@ -21,11 +21,11 @@ chardet==4.0.0
 ecdsa==0.14.1
     # via python-jose
 elasticsearch-dsl==7.2.1
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 elasticsearch==7.12.1
     # via elasticsearch-dsl
-fastapi==0.61.1
-    # via event-stream-api (setup.py)
+fastapi==0.65.2
+    # via okdata-event-stream-api (setup.py)
 idna==2.10
     # via requests
 jmespath==0.10.0
@@ -35,22 +35,22 @@ jmespath==0.10.0
 jsonschema==3.2.0
     # via okdata-sdk
 mangum==0.10.0
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 okdata-aws==0.4.0
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 okdata-resource-auth==0.1.0
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 okdata-sdk==0.8.1
     # via
-    #   event-stream-api (setup.py)
     #   okdata-aws
+    #   okdata-event-stream-api (setup.py)
 prettytable==2.1.0
     # via okdata-sdk
 pyasn1==0.4.8
     # via
     #   python-jose
     #   rsa
-pydantic==1.8.1
+pydantic==1.8.2
     # via
     #   fastapi
     #   okdata-aws
@@ -67,9 +67,9 @@ python-jose==3.2.0
 python-keycloak==0.24.0
     # via okdata-sdk
 pytz==2021.1
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 requests-aws4auth==1.0
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 requests==2.25.1
     # via
     #   okdata-resource-auth
@@ -81,7 +81,7 @@ rsa==4.7.2
 s3transfer==0.3.7
     # via boto3
 shortuuid==1.0.1
-    # via event-stream-api (setup.py)
+    # via okdata-event-stream-api (setup.py)
 six==1.16.0
     # via
     #   ecdsa
@@ -89,7 +89,7 @@ six==1.16.0
     #   jsonschema
     #   python-dateutil
     #   python-jose
-starlette==0.13.6
+starlette==0.14.2
     # via fastapi
 structlog==21.1.0
     # via okdata-aws
