Add `types-pytz` to mypy build

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ skip_install = true
 deps =
     mypy
     boto3-stubs[sts,cloudformation]
+    types-pytz
     -r requirements.txt
 commands =
     mypy app.py
