T55 Bake in `event-collector:post_events`
Bake in the `post_events` Lambda function from `event-collector`,
adjusting it to FastAPI and making other refactorings to the code and
tests along the way.

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,9 @@ namespace_packages = True
 [mypy-okdata.*]
 ignore_missing_imports = True
 
+[mypy-requests.*]
+ignore_missing_imports = True
+
 [mypy-keycloak.*]
 ignore_missing_imports = True
 
