--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ deps =
     networkx==2.5.1
     pytest
     pytest-mock
+    requests-mock
+    types-requests
+    types-simplejson
     -r requirements.txt
 commands =
     pytest {posargs}
@@ -24,6 +27,7 @@ setenv =
     KEYCLOAK_SERVER=https://example.org
     KEYCLOAK_REALM=mock
     RESOURCE_SERVER_CLIENT_ID=okdata-resource-server
+    METADATA_API_URL=https://example.org/metadata
 
 [testenv:flake8]
 skip_install = true
@@ -48,7 +52,6 @@ deps =
     -r requirements.txt
 commands =
     mypy app.py
-
 
 [flake8]
 # https://github.com/ambv/black/blob/master/.flake8
