--- a/requirements.txt
+++ b/requirements.txt
@@ -36,16 +36,14 @@ jsonschema==3.2.0
     # via okdata-sdk
 mangum==0.10.0
     # via okdata-event-stream-api (setup.py)
-okdata-aws==0.4.0
+okdata-aws==1.0.0
     # via okdata-event-stream-api (setup.py)
 okdata-resource-auth==0.1.0
     # via okdata-event-stream-api (setup.py)
-okdata-sdk==0.8.1
+okdata-sdk==0.9.1
     # via
     #   okdata-aws
     #   okdata-event-stream-api (setup.py)
-prettytable==2.1.0
-    # via okdata-sdk
 pyasn1==0.4.8
     # via
     #   python-jose
@@ -70,6 +68,7 @@ pytz==2021.1
     # via okdata-event-stream-api (setup.py)
 requests==2.25.1
     # via
+    #   okdata-aws
     #   okdata-event-stream-api (setup.py)
     #   okdata-resource-auth
     #   okdata-sdk
@@ -93,7 +92,9 @@ six==1.16.0
     #   python-dateutil
     #   python-jose
 starlette==0.14.2
-    # via fastapi
+    # via
+    #   fastapi
+    #   okdata-aws
 structlog==21.1.0
     # via okdata-aws
 typing-extensions==3.10.0.0
@@ -104,10 +105,7 @@ urllib3==1.26.6
     # via
     #   botocore
     #   elasticsearch
-    #   okdata-sdk
     #   requests
-wcwidth==0.2.5
-    # via prettytable
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
